--- a/CSS/leonardasf1.css
+++ b/CSS/leonardasf1.css
@@ -3,11 +3,12 @@
 }
 
 html, body {
+    color: #D8D7D4;
 	padding: 0;
 	margin: 0;
     font-family: -apple-system, RobotoLight, sans-serif;
     font-size: 16px;
-    background-color: #c0c0c0;
+    background-color: #37393B;
     -moz-osx-font-smoothing: grayscale;
     line-height: 2rem;
 }
@@ -16,7 +17,7 @@ li {
   list-style-type: none;
 }
 a {
-    color: black;
+    color: #D8D7D4;
     text-decoration: none;
 }
 a:hover, #headerMenu>div:first-child {
