--- a/CSS/leonardasf1.css
+++ b/CSS/leonardasf1.css
@@ -1,7 +1,19 @@
 * {
-	box-sizing: border-box
+	box-sizing: border-box;
+    scrollbar-width: thin;
+    scrollbar-color: #bfbfbf #0000;
 }
-
+*::-webkit-scrollbar {
+    width: .5vw;
+    min-width: 7px;
+    height: .5vh;
+    min-height: 7px;
+}
+*::-webkit-scrollbar-thumb {
+    background: #bfbfbf;
+    border-radius: 5px;
+}
+*::-webkit-scrollbar-corner { display: none; }
 body {
     color: #D8D7D4;
 	padding: 0;
@@ -10,12 +22,11 @@ body {
     font-size: 16px;
     background-color: #37393B;
     -moz-osx-font-smoothing: grayscale;
-    /*line-height: 2rem;*/
 }
 img { max-width: 98vw; }
-li { 
-  list-style-type: none;
-}
+
+li { list-style-type: none; }
+
 a {
     color: #D8D7D4;
     text-decoration: none;
@@ -58,7 +69,7 @@ header {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
     flex-wrap: wrap;
 }
-@media (max-width:800px) {
+@media (max-width:700px) {
     #headerMenu {
         overflow: hidden;
     }
@@ -123,7 +134,7 @@ article {
     background: rgba(0,0,0,.4);
     height: 60px;
     padding: 0 2%;
-    overflow: scroll;
+    overflow-x: auto;
 }
 
 #links a {
@@ -172,8 +183,7 @@ summary+* {
     position: absolute;
     left: 1vw;
     box-shadow: 0 8px 16px 0 black;
-    overflow: scroll;
-    max-width: 98vw;
+    max-width: 97vw;
 }
 #footerScrollTop {
     z-index: 100;
@@ -182,7 +192,7 @@ summary+* {
     top: 74px;
     width: 30px;
     height: 30px;
-    color: rgba(255,255,255,0.7);
+    color: #bfbfbf;
     transition: right .5s;
 }
 #footerScrollTop:hover {
