--- a/CSS/leonardasf1.css
+++ b/CSS/leonardasf1.css
@@ -42,7 +42,6 @@ header {
     width: 100%;
     height: 95px;
     display: block;
-    background: rgba(0,0,0,.4);
 }
 
 .fsac , #headerMenu, #headerMenu>div:first-child, #links, #links a {
@@ -131,7 +130,7 @@ article {
 }
 
 #links {
-    background: rgba(0,0,0,.4);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
     height: 60px;
     padding: 0 2%;
     overflow-x: auto;
