--- a/CSS/style.css
+++ b/CSS/style.css
@@ -71,6 +71,11 @@ header {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
     flex-wrap: wrap;
 }
+#headerMenu span {
+    display: inline-block;
+    width: 0;
+    overflow: hidden
+}
 
 #links {
     height: min-content;
@@ -84,15 +89,7 @@ header {
     }
 }
 
-/*#headerMenu>div:first-child {
-    min-width: 250px;
-    font-weight: 700;
-    font-family: monospace;
-    font-size: 32px;
-    line-height: 32px;
-}*/
-
-#headerMenu>div {
+#headerMenu>a {
     margin: 0 1%;
 }
 
@@ -104,39 +101,11 @@ summary img, ul img {
     bottom: -2px;
 }
 
-/*.item {
-    color: black;
-    padding: 12px 1vw;
-    font-weight: 700;
-    font-family: monospace;
-    cursor: pointer;
-}
-.item:hover, .item:focus {background-color: rgba(0,0,0,.2);}
-*/
-/*.submenu {
-    background-color: rgba(87,144,169,.8);
-    display: none;
-    position: absolute;
-    min-width: 160px;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
-}*/
-.slideT {
-  display: block;
-  animation: .5s slideT forwards;
-}
-@keyframes slideT { from { opacity: 0 } to { opacity: 1 }}
-
-.submenu a {
-    color: white;
-    padding: 12px 16px;
-    display: block;
-}
-.submenu a:hover {background: rgba(0,0,0,.1);}
-
 content {
     min-height: 76vh;
     display: block;
     padding: 0 1%;
+    transition: .5s;
 }
 
 nav {
@@ -156,9 +125,8 @@ nav>a {
     color: white;
     filter: drop-shadow(0 2px 2px black);
 }
-.details {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 330px);
+.navLink, .headerLink {
+    transition: 1s;
 }
 
 summary {
@@ -228,4 +196,4 @@ footer {
     background-size: 16px;
     padding-left: 20px;
 }
-#pageTitle, #headerTitle { display: none }
+#pageTitle { display: none }
