--- a/programming/primery/skillboxLanding/style.css
+++ b/programming/primery/skillboxLanding/style.css
@@ -9,110 +9,116 @@ html, body {
     max-width: 1200px
 }
 
-    a {
-        color: black;
-        text-decoration: none;
-        margin-right: 30px;
-    }
-    a:hover {
-        color: rgb(252, 85, 124);
-        border-bottom: 1px solid rgb(252, 85, 124);
-    }
-    header {
-    	height: 770px;
-    	background-color: #fbfbfb;
-    }
+header {
+	height: 770px;
+	background-color: #fbfbfb;
+}
 .fixed-width {
-        	width: 1170px;
-        	margin: 0 auto ;
-    		padding: 0 30px;
-    		height: 100px;
-        }
-        	nav {
-        		height: 100%;
-        		float: left;
-        		display: flex;
-                align-items: center;
-        	}
-        	#contact-container {
-        		height: 100%;
-                float: right;
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
-        	}
-        	#phone {
-        		font-weight: bolt;
-        		font-size: 25px;
-        	}
-
-    #button-call {
-        		border: 1px solid rgb(252, 85, 124);
-        		color: red;
-        		padding: 11px 30px 11px;
-        		margin-left: 30px;
-        		background-color: #fbfbfb;
-        		font-size: 16px
-        	}
-#dafoto {
-            width: 1290px;
-            margin: 0 auto ;
-            padding: 10px 107px 10px 170px;
-            height: 650px;
-            background: url(img/Dmitry_Alekseev.png) no-repeat 800px -90px;
-            vertical-align: bottom;
+    width: 1170px;
+    margin: 0 auto ;
+    padding: 0 30px;
+    height: 100px;
+}
+nav {
+	height: 100%;
+	float: left;
+	display: flex;
+    align-items: center;
+}
+a { 
+    text-decoration: none;
+    color: gray;
+}
+a:hover { color: black; }
+nav>a {
+    color: black;
+    margin-right: 30px;
+}
+nav>a:hover {
+    color: rgb(252, 85, 124);
+    border-bottom: 1px solid rgb(252, 85, 124);
+}
+#contact-container {
+	height: 100%;
+    float: right;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+#phone {
+	font-weight: bolt;
+	font-size: 25px;
 }
 
-    #button-da {
-                color: white;
-                margin-top: 40px;
-                padding: 17px 66px;
-                background-color: red;
-                font-size: 18px
-            }
-#section1 { 
-        height: 480px;
-        background-color: #ffffff;
-    }
-    h1 {
-        font-size: 55px;
-        text-align: center;
-    }
-    .four-cell {
-        width: 1170px;
-        margin: 0 auto ;
-        padding: 20px 30px;
-        display: flex;
-    }
-        .cell {
-            width: 25%;
-            padding: 0 20px;
-            text-align: center;
-            color: #cccccc;
-            font-size: 20px;
-        }
+#dafoto {
+    width: 1290px;
+    margin: 0 auto ;
+    padding: 10px 107px 10px 170px;
+    height: 650px;
+    background: url(img/Dmitry_Alekseev.png) no-repeat 800px -90px;
+    vertical-align: bottom;
+}
 
-    .cost {
-        margin: 0 auto ;
-        padding: 20px 30px;
-        text-align: center;
-    }
+.button-call {
+	border: 1px solid rgb(252, 85, 124);
+	color: red;
+	padding: 11px 30px 11px;
+	margin-left: 30px;
+	background-color: #fbfbfb;
+	font-size: 16px
+}
+#button-da {
+    color: white;
+    margin-top: 40px;
+    padding: 17px 66px;
+    background-color: red;
+    font-size: 18px
+}
+#button-da > a {color: white}
+
+#section1 { 
+    height: 480px;
+    background-color: #ffffff;
+}
+h1 {
+    font-size: 55px;
+    text-align: center;
+}
+.four-cell {
+    width: 1170px;
+    margin: 0 auto ;
+    padding: 20px 30px;
+    display: flex;
+}
+.cell {
+    width: 25%;
+    padding: 0 20px;
+    text-align: center;
+    color: gray;
+    font-size: 20px;
+}
+
+.cost {
+    margin: 0 auto ;
+    padding: 20px 30px;
+    text-align: center;
+}
 #section2 { 
-        height: 800px;
-        background-color: #fbfbfb;
-    }
-        .cell3 {
-            width: 33%;
-            padding: 0 15px;
-            text-align: center;
-            color: #cccccc;
-            font-size: 20px;
-        }
+    height: 800px;
+    background-color: #fbfbfb;
+}
+.cell3 {
+    width: 33%;
+    padding: 0 15px;
+    text-align: center;
+    color: gray;
+    font-size: 20px;
+}
 #section3 { 
-        height: 350px;
-        background-color: red;
-        color: white;
-        font-size: 20px;
+    height: 350px;
+    background-color: red;
+    color: white;
+    font-size: 20px;
 }
 #section3 div {
     max-width: 1170px;
@@ -133,7 +139,7 @@ html, body {
 .cell4 {
     width: 33%;
     padding: 0 15px;
-    color: #cccccc;
+    color: gray;
     font-size: 20px;
 }
 
@@ -149,12 +155,17 @@ footer {
     display: none;
     position: fixed;
     top: 0;
-    left: 0;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     justify-content: center;
     align-items: center;
+}
+#background_remove {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 10100;
 }
 #popup {
     width: 300px;
@@ -163,6 +174,7 @@ footer {
     padding: 30px;
     text-align: center;
     color: grey;
+    z-index: 10200;
 }
 #popup h2 {
     margin-top: 0;
@@ -176,11 +188,11 @@ footer {
     font-size: 18px;
     padding: 0 17px;
 }
-    #button-input {
-        color: white;
-        margin-bottom: 5px;
-        margin-left: 5px;
-        font-size: 18px;
-        padding: 17px 65px 17px 66px;
-        background-color: red;
-    }
+#button-input {
+    color: white;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    font-size: 18px;
+    padding: 17px 65px 17px 66px;
+    background-color: red;
+}
