--- a/CSS/lb_style.css
+++ b/CSS/lb_style.css
@@ -21,9 +21,10 @@
   max-width: 100vw;
   z-index: 10200;
 }
-#lb_btn_prev, #lb_btn_next {
+
+#lb_btn_prev, #lb_btn_next, #lb_btn_close {
   position: absolute;
-  cursor: pointer;
+  /*cursor: pointer;*/
   height: 30%;
   opacity: 0;
   transition: opacity 0.6s;
@@ -32,18 +33,23 @@
 #lb_btn_prev {
   width: 34%;
   left: 0;
-  float: left;
   background: url(../icons/prev.png) left 48% no-repeat;
 }
 #lb_btn_next {
   width: 64%;
   right: 0;
-  float: right;
   background: url(../icons/next.png) right 48% no-repeat;
 }
-#lb_btn_next:hover, #lb_btn_prev:hover {
+#lb_btn_close {
+  width: 20%;
+  right: 0;
+  top: 0;
+  background: url(../icons/close.png) right 0 no-repeat;
+}
+#lb_btn_next:hover, #lb_btn_prev:hover, #lb_btn_close:hover {
   opacity: 1;
 }
+
 .lb_show { animation: lb_show 1s forwards}
 @keyframes lb_show {
   from { opacity: 0 }
