--- a/CSS/lb_style.css
+++ b/CSS/lb_style.css
@@ -20,6 +20,7 @@
   max-height: 100vh;
   max-width: 100vw;
   z-index: 10200;
+  background: url(../icons/loader.svg) no-repeat;
 }
 
 #lb_btn_prev, #lb_btn_next, #lb_btn_close {
