--- a/CSS/style.css
+++ b/CSS/style.css
@@ -175,7 +175,7 @@ footer {
 .flex > * {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
     padding: 1rem;
-    margin: 1rem;
+    margin: 1vh auto;
     max-width: 97vw;
 }
 .grid { display: grid }
