--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,10 @@
+@import url('header.css');
+
 body * {
 	box-sizing: border-box;
     scrollbar-width: thin;
     scrollbar-color: #bfbfbf #0000;
+    margin: 0;
 }
 
 body *::-webkit-scrollbar {
@@ -26,38 +29,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-	z-index: 1000;
-    position: relative;
-    width: 100%;
-    height: 95px;
-    display: block;
-}
-
-#headerMenu {
-    display: flex;
-    align-items: center;
-    padding: 0 3%;
-    width: 100vw;
-    height: 95px;
-    position: fixed;
-    background: linear-gradient(135deg, #8360c3, #2ebf91);
-    transition: height .5s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-@media (max-width:700px) {
-    #headerMenu { overflow: hidden }
-}
-
-#headerMenu span, .hidden {
-    display: inline-block;
-    width: 0;
-    overflow: hidden
-}
-
 #links {
     height: min-content;
 }
@@ -69,17 +40,9 @@ main {
     transition: .5s;
 }
 
-nav {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding: 26px 3% 0;
-}
-
 a {
     display: inline-flex;
     align-items: center;
-    min-height: 48px;
     min-width: 48px;
     color: #D8D7D4;
     text-decoration: none;
@@ -87,31 +50,10 @@ a {
     background-position-y: center;
 }
 a:hover {
-    color: white;
     filter: drop-shadow(0 2px 2px black);
 }
 
-#headerMenu>a {
-    margin: 0 1%;
-    display: flex;
-    align-items: center;
-}
-
-#headerMenu>a, nav>a {
-    font-weight: 700;
-    font-family: monospace;
-    font-size: 1.5rem;
-    color: white;
-    filter: drop-shadow(0 2px 2px black);
-    transition: 1s;
-}
-
-nav>a {
-    margin-right: 5%;
-    margin-bottom: 1rem;
-}
-
-.img32 img, #headerMenu img, nav img, nav svg, #links img { height: 32px }
+.img32 img, #headerMenu img, #links img { height: 32px }
 
 #links.img16 img, summary img, ul img, .img16 img { height: 16px }
 
@@ -160,6 +102,12 @@ footer {
     align-items: center;
     height: 100px;
     justify-content: space-evenly;
+}
+
+.hidden {
+    display: inline-block;
+    width: 0;
+    overflow: hidden
 }
 
 .darker { background: rgba(0,0,0,.2); }
