--- a/CSS/lb_style.css
+++ b/CSS/lb_style.css
@@ -29,22 +29,30 @@
   opacity: 0;
   transition: opacity 0.6s;
   z-index: 10300;
+  font-size: 56px;
+  color: #fff;
+  font-weight: 700;
+  padding: 20px
 }
 #lb_btn_prev {
   width: 34%;
   left: 0;
-  background: url(../icons/prev.png) left 48% no-repeat;
+  /*background: url(../icons/prev.png) left 48% no-repeat;*/
 }
 #lb_btn_next {
   width: 64%;
   right: 0;
-  background: url(../icons/next.png) right 48% no-repeat;
+  justify-content: end;
+  /*background: url(../icons/next.png) right 48% no-repeat;*/
 }
 #lb_btn_close {
   width: 20%;
-  right: 15px;
-  top: 15px;
-  background: url(../icons/close.png) right 0 no-repeat;
+  right: 0;
+  top: 0;
+  display: block;
+  text-align: right;
+  line-height: 0;
+  /*background: url(../icons/close.png) right 0 no-repeat;*/
 }
 #lb_btn_next:hover, #lb_btn_prev:hover, #lb_btn_close:hover, #lb_attrTitle:hover {
   opacity: 1;
