--- a/CSS/progr.css
+++ b/CSS/progr.css
@@ -8,17 +8,22 @@ h2 {margin-top: 0px}
 s { color: red; }
 
 [href*="developer.mozilla"]:before {
-    content: url(https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png);
+    background: url(https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png) no-repeat 0;
+    padding-left: 20px;
 }
-[href*="itvdn"]:before {
-    content: url(../icons/itvdn.svg);
+[href*="itvdn"] {
+    background: url(../icons/itvdn.svg) no-repeat 0;
+    padding-left: 20px;
 }
-main [href*="github"]:before {
-    content: url(../icons/github.svg);
+main [href*="github"] {
+    background: url(../icons/github.svg) no-repeat 0;
+    padding-left: 20px;
 }
-[href*="frontendconf.ru"]:before {
-    content: url(https://frontendconf.ru/i/frontendconf/2019/favicon.ico);
+[href*="frontendconf.ru"] {
+    background: url(https://frontendconf.ru/i/frontendconf/2019/favicon.ico) no-repeat 0;
+    padding-left: 20px;
 }
-[href*="habr.com"]:before {
-    content: url(https://habr.com/images/favicon-16x16.png);
+[href*="habr.com"] {
+    background: url(https://habr.com/images/favicon-16x16.png) no-repeat 0;
+    padding-left: 20px;
 }
