--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,8 @@
 
 body * {
 	box-sizing: border-box;
-    scrollbar-width: thin;
-    scrollbar-color: #bfbfbf #0000;
+    /*scrollbar-width: thin;*/
+    /*scrollbar-color: #bfbfbf #0000;*/
     margin: 0;
 }
 
@@ -46,7 +46,7 @@ a {
     min-width: 48px;
     color: #D8D7D4;
     text-decoration: none;
-    cursor: pointer;
+    /*cursor: pointer;*/
     background-position-y: center;
 }
 a:hover {
@@ -150,12 +150,16 @@ footer {
 
 #pageTitle, #pageLogo { display: none }
 
-[href*="youtu"]:before {
-    content: url(../icons/youtu.svg);
+[href*="youtu"] {
+    background: url(../icons/youtu.svg) no-repeat 0;
+    padding-left: 20px;
 }
-[href*="yadi.sk"]:before {
-    content: url(https://yastatic.net/disk/public3/_/5hb_sU044zVfPgNsMKf8pNs2_6H.png);
+[href*="yadi.sk"] {
+    background: url(https://yastatic.net/disk/public3/_/5hb_sU044zVfPgNsMKf8pNs2_6H.png) no-repeat 0;
+    padding-left: 20px;
 }
-[href*="wikipedia.org"]:before {
-    content: url(https://ru.wikipedia.org/static/favicon/wikipedia.ico);
+[href*="wikipedia.org"] {
+    background: url(../icons/wiki.svg) no-repeat 0;
+    padding-left: 20px;
+    background-size: 16px;
 }
